welcome.lessons.welcome.array.search.MaxValue.scala.error
maxValue:3: error: not found: value min
  min = nums(0)
  ^maxValue:4: error: type mismatch;
 found   : Unit
 required: Int
  for(i <- nums)
        ^